# OperatingSystems_Winter2018

./: README.md
Examples/code2compile/: Apples.java  RainbowConnection.java  forkdemo.c  forkdouble.c
Examples/synch/: Driver.java  Sum.java  Summation.java  buffer.c  simple-prod-con.c  sum-thread.c  thread-collision.c
MultiProdCon/: mpc  multiprodcon.cpp  runCmd
VirtualMemory/: CMakeLists.txt  Fifo_Implementation.cpp  Fifo_Implementation.h  Lfu_Implementation.cpp  Lfu_Implementation.h  Optimal_Implementation.cpp  Optimal_Implementation.h  Physical_Memory.cpp  Physical_Memory.h  VirtualMemory  Virtual_Memory.cpp  Virtual_Memory.h  main.cpp
